08-ELB-Application-LoadBalancers/08-02-ALB-Ingress-Basics/kube-manifests/01-MySQL-externalName-Service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  type: ExternalName
  externalName: usermgmtdb.cigplqoqggtj.us-west-2.rds.amazonaws.com
